--- a/Projects/ProjectStarkSemi/ConoscopeWindow.xaml
+++ b/Projects/ProjectStarkSemi/ConoscopeWindow.xaml
@@ -150,7 +150,9 @@
                     <RibbonGroup Header="Files">
                         <RibbonButton Label="Open" SmallImageSource="Images/Open32.png"  KeyTip="O" Click="OpenFile_Click" />
                         <RibbonButton Label="SaveAs" SmallImageSource="Images/SaveAs32.png"  KeyTip="O" Click="OpenFile_Click" />
-                        <RibbonButton Label="导出CSV"  Click="btnExportCSV_Click" Padding="10,5"/>
+                        <RibbonButton Label="角度模式导出"  Click="btnExportAngleMode_Click" Padding="10,5"/>
+                        <RibbonButton Label="同心圆模式导出"  Click="btnExportCircleMode_Click" Padding="10,5"/>
+   
                     </RibbonGroup>
                 </RibbonTab>
                 <RibbonTab Header="Camera"  Padding="10">
@@ -412,25 +414,13 @@
                             <StackPanel>
                                 <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                                     <TextBlock Text="添加角度:" VerticalAlignment="Center" Margin="5,0,5,0"/>
-                                    <TextBox x:Name="txtAngle" 
-                                             MinWidth="60" 
-                                             VerticalAlignment="Center"
-                                             Margin="0,0,5,0"/>
-                                    <TextBlock Text="°" VerticalAlignment="Center" Margin="0,0,5,0"/>
-                                    <Button Content="添加" 
-                                            Click="btnAddAngle_Click"
-                                            Padding="10,2"
-                                            Margin="0,0,5,0"/>
-                                    <Button Content="删除选中" 
-                                            Click="btnRemoveAngle_Click"
-                                            Padding="10,2"/>
+                                    <TextBox x:Name="txtAngle" MinWidth="60"   VerticalAlignment="Center"   Margin="0,0,5,0"/>
+                                    <Button Content="添加"  Click="btnAddAngle_Click"   Padding="10,2" Margin="0,0,5,0"/>
+                                    <Button Content="删除选中" Click="btnRemoveAngle_Click"   Padding="10,2"/>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="当前角度:" VerticalAlignment="Center" Margin="5,0,5,0"/>
-                                    <ComboBox x:Name="cbPolarAngleLines" 
-                                              MinWidth="100" 
-                                              SelectionChanged="cbPolarAngleLines_SelectionChanged"/>
-                                    <Button Content="导出CSV"  Click="btnExportCSV_Click" Padding="10,5"/>
+                                    <ComboBox x:Name="cbPolarAngleLines"  MinWidth="100"  SelectionChanged="cbPolarAngleLines_SelectionChanged"/>
                                 </StackPanel>
                             </StackPanel>
                         </GroupBox>
