--- a/Test/ConoscopeDemo/DemoWindow.xaml
+++ b/Test/ConoscopeDemo/DemoWindow.xaml
@@ -53,7 +53,7 @@
                 <ComboBoxItem Content="150°" Tag="150"/>
                 <ComboBoxItem Content="180°" Tag="180"/>
             </ComboBox>
-            
+
             <TextBlock Text="显示通道:" 
                        Foreground="White" 
                        VerticalAlignment="Center"
@@ -62,9 +62,6 @@
                       Width="100"
                       SelectedIndex="4"
                       SelectionChanged="CbDisplayChannel_SelectionChanged">
-                <ComboBoxItem Content="R通道" Tag="R"/>
-                <ComboBoxItem Content="G通道" Tag="G"/>
-                <ComboBoxItem Content="B通道" Tag="B"/>
                 <ComboBoxItem Content="X通道" Tag="X"/>
                 <ComboBoxItem Content="Y通道" Tag="Y"/>
                 <ComboBoxItem Content="Z通道" Tag="Z"/>
@@ -88,14 +85,8 @@
                            FontSize="14" 
                            Margin="5"
                            HorizontalAlignment="Center"/>
-                <ScrollViewer Grid.Row="1" 
-                              HorizontalScrollBarVisibility="Auto" 
-                              VerticalScrollBarVisibility="Auto">
-                    <Image x:Name="imgDisplay" 
-                           Stretch="Uniform"
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"/>
-                </ScrollViewer>
+                <Image Grid.Row="1" x:Name="imgDisplay"   Stretch="Uniform" />
+
             </Grid>
         </Border>
 
@@ -105,6 +96,10 @@
                 BorderThickness="1" 
                 Margin="5,0,0,0">
             <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="44*"/>
+                    <ColumnDefinition Width="167*"/>
+                </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
@@ -114,11 +109,11 @@
                            Grid.Row="0"
                            Foreground="White" 
                            FontSize="14" 
-                           Margin="5"
-                           HorizontalAlignment="Center"/>
+                           Margin="150,5,0,5"
+                           HorizontalAlignment="Left" Grid.Column="1"/>
                 <ScottPlot:WpfPlot x:Name="plotChart" 
                                    Grid.Row="1" 
-                                   Margin="5"/>
+                                   Margin="5,5,5,5" Grid.ColumnSpan="2"/>
             </Grid>
         </Border>
 
