--- a/UI/ColorVision.Solution/Workspace/SoloutionEditorControl.xaml
+++ b/UI/ColorVision.Solution/Workspace/SoloutionEditorControl.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="ColorVision.Solution.Searches.SoloutionEditorControl"
+﻿<UserControl x:Class="ColorVision.Solution.Workspace.SoloutionEditorControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ColorVision.Solution.Searches"
+             xmlns:local="clr-namespace:ColorVision.Solution.Workspace"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Initialized="UserControl_Initialized">
     <Grid Background="{DynamicResource GlobalBackground}">
