--- a/ColorVision/ConfigManagerWindow.xaml
+++ b/ColorVision/ConfigManagerWindow.xaml
@@ -25,7 +25,7 @@
             
             <!-- Search box on the left -->
             <Grid x:Name="SearchGrid" Grid.Column="0" Margin="0,0,5,0" HorizontalAlignment="Stretch" VerticalAlignment="Center">
-                <hc:TextBox x:Name="Searchbox" Style="{DynamicResource TextBoxPlus.Small}" Padding="25,5,5,5" BorderThickness="1" 
+                <hc:TextBox x:Name="Searchbox" Style="{DynamicResource TextBoxPlusBaseStyle}" Padding="25,5,5,5" BorderThickness="1" 
                            hc:InfoElement.Placeholder="{x:Static properties:Resources.Search}" BorderBrush="#CCCEDB" 
                            VerticalContentAlignment="Center" TextChanged="Searchbox_TextChanged"/>
                 <Viewbox Width="14" Height="14" HorizontalAlignment="Left" Margin="5,0,0,0">
